Fix modal height on mobile

--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -59,7 +59,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
-    height: 100vh;
+    height: 90%;
 
     padding: 30px 1em 1em 1em;
     z-index: 1002;
